# flexy

./: Makefile  README.md  pyproject.toml
contrib/: yaml-mode-hack.el  yaml-mode-hack.elc
env/: .gitignore  petal.freeze  petal.json
flexy/: __init__.py
